# api-rust

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: deploy.yml
src/: main.rs
src/slack/: block.rs  mod.rs  payload.rs  text_object.rs
