[[bin]]
name = "dappface-api"
path = "src/main.rs"

[package]
name = "dappface-api"
version = "0.1.0"
authors = ["lukesugiura <jun@dappface.com>"]
edition = "2018"

[dependencies]
futures-util-preview = "=0.3.0-alpha.19"
hyper = { version = "0.13.0-alpha.4", features=["runtime", "unstable-stream"] }
openssl-probe = "0.1.2"
pretty_env_logger = "0.3.1"
regex = "1.3.1"
reqwest = { version = "0.10.0-alpha.1", features = ["json"] }
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
tokio = "1.8.4"
url = "2.1.0"

[dev-dependencies]
openssl = { version = "0.10", features = ["vendored"] }
